# ai-multiagent-framework

./: CMakeLists.txt  cmakkkk  readme.md  tests-doc.md
src/: agent.cpp  agent.h  agent_factory.cpp  agent_factory.h  agent_manager.cpp  agent_manager.h  framework.cpp  framework.h  learning_agent.cpp  learning_agent.h  logging_service.cpp  logging_service.h  main.cpp  messages.h  rule_based_agent.cpp  rule_based_agent.h  websocket_server.cpp  websocket_server.h
tests/: agent_factory_test.cpp  agent_manager_test.cpp  agent_test.cpp  framework_test.cpp  integration_test.cpp  learning_agent_test.cpp  rule_based_agent_test.cpp  test_main.cpp
